[package]
name = "wpkpp"
description = "Woodpecker++: alternative VM for woodpecker esolang scripts.\nNow with compression, fixed testcases and JSON output.\nOriginal at https://github.com/radical-semiconductor/woodpecker/"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }

utf8-chars = "2.0.3"

bitvec = "1.0.1"
rand = "0.8.5"
rand_seeder = "0.2.3"

anyhow = "1.0.68"
colored = "2.0.0"
miniserde = "0.1.28"